[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-token-guard"
version = "0.6.0"
description = "Track LLM token usage, enforce policies & budget limits, and trigger alerts — across OpenAI, Groq, OpenRouter, AWS Bedrock, and custom providers."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Abhijit Gunjal", email = "abhijitgunjal1648@gmail.com" }
]
keywords = [
    "llm", "tokens", "openai", "groq", "openrouter",
    "bedrock", "tiktoken", "rate-limiting", "token-tracking", "policies"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "tiktoken>=0.6.0",
]

[project.optional-dependencies]
groq         = ["transformers>=4.40.0"]
bedrock      = ["boto3>=1.34.0"]
fastapi      = ["fastapi>=0.110.0", "uvicorn[standard]>=0.29.0"]
redis        = ["redis>=5.0.0"]
sqlite-async = ["aiosqlite>=0.20.0"]
postgres     = ["psycopg[binary]>=3.1.0", "asyncpg>=0.29.0"]
dynamodb     = ["boto3>=1.34.0", "aioboto3>=12.0.0"]
dev          = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0", "build>=1.0.0", "twine>=5.0.0"]
all          = ["transformers>=4.40.0", "boto3>=1.34.0", "fastapi>=0.110.0", "uvicorn[standard]>=0.29.0", "redis>=5.0.0", "aiosqlite>=0.20.0", "psycopg[binary]>=3.1.0", "asyncpg>=0.29.0", "aioboto3>=12.0.0"]

[project.urls]
Homepage      = "https://github.com/abhijitgunjal/token_guard"
Repository    = "https://github.com/abhijitgunjal/token_guard"
"Bug Tracker" = "https://github.com/abhijitgunjal/token_guard/issues"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["token_guard"]
omit   = ["tests/*", "examples/*"]
